# hyprsettings

./: .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  INSTALLATION_NIX.md  NIX_INSTALLATION.md  PKGBUILD  README.md  RELEASE_NOTES.md  build.sh  config.kdl  config_niri_short.kdl  default.nix  dev.sh  flake.nix  hyprland_config_descriptions.js  hyprsettings.py  hyprsettings.sh  hyprsettings_installer.py  hyprui.code-workspace  jsconfig.json  justfile  main.py  package.json  py.txt  pyproject.toml  ruff.toml  run.sh  setupscript.sh  shell.nix  style.qss  test_config.conf  tsconfig.json  update_version.py
.github/: git-commit-instructions.md
assets/: hyprsettings.psd
releases/: v0.1.6.md
src/: .version  animations.conf.conf  config_parser.py  default_config.py  default_config.toml  globtest.py  globtest_filegenerator.py  hyprconf_parser.py  hyprsettings  hyprsettings.spec  hyprsettings_config.schema.json  migration.py  parser.py  stderr.py  test_hyprland.conf  test_keybindings.conf  test_windowrules.conf  todo.txt  ui.py
src/hyprland-wiki-content/: .version  _index.md  navigation.txt
src/hyprsettings_utils/: argument_parser.py  config_validator.py  flask_routes.py  hyprland_parser.py  hyprland_wiki.py  hyprsettings_config.py  pywebview_apis.py  shared.py  (+2 more)
tests/: test_config_schema.py  test_hyprland_parser.py
tooling/: git_tag_version.py  helpers.py  hyprland-wiki header extractor.js  hyprland_config_descriptions.js  sconfigdescriptions_parser.py  update_version.py  wiki-content-checkout.py  wiki-content-checkout.sh
(+296 files in other folders)
