[project]
name = "hyprsettings"
version = "0.9.2"
description = "A configurator for hyprland with "
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "packaging>=25.0",
    "pretty-errors>=1.2.25",
    "pyinstaller>=6.19.0",
    "python-dotenv>=1.2.1",
    "pywebview[gtk,qt]>=6.1",
    "rich>=14.2.0",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
